Reduce overdocumentation. Add info endpoint specifying checksum type
